--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
         <div class="invalid-feedback"
           *ngIf="!form.controls.license.pristine && form.controls.license.status == 'INVALID'">
           <p *ngIf="form.getError('required', 'license')"> *This field is required </p>
+          <p *ngIf="form.getError('licenseValidator', 'license')"> *Incorrect license format </p>
           <p *ngIf="form.getError('minlength', 'license')"> *Invalid license </p>
         </div>
       </div>
@@ -21,6 +22,7 @@
           placeholder="dd/mm/aa" [class.is-invalid]="isInvalid('date')" />
         <div class="invalid-feedback" *ngIf="!form.controls.date.pristine && form.controls.date.status == 'INVALID'">
           <p *ngIf="form.getError('required', 'date')"> *This field is required </p>
+          <p *ngIf="form.getError('dateValidator', 'date')"> *Incorrect date format </p>
         </div>
       </div>
 
@@ -30,6 +32,7 @@
           placeholder="15:00" [class.is-invalid]="isInvalid('time')" />
         <div class="invalid-feedback" *ngIf="!form.controls.time.pristine && form.controls.time.status == 'INVALID'">
           <p *ngIf="form.getError('required', 'time')"> *This field is required </p>
+          <p *ngIf="form.getError('timeValidator', 'time')"> *Incorrect time format </p>
         </div>
       </div>
 
